# Hangmen

./: Client.py  README.md  User.py  game.py  server.py
c_server/: CMakeLists.txt  dict.c  server.c
python_server/: Box.py  Dict.py  server.py  test_dictionary.txt
server/: CMakePresets.json  config.h  dict.h  game.c  game.h  server.c  tokens.c  tokens.h
